fixed chatbox bottom going under input textfield on mobile with bottom nav panel

--- a/webui/static/style.css
+++ b/webui/static/style.css
@@ -181,6 +181,8 @@ svg:hover {
     padding-top: 10px;
     padding-bottom: 10px;
     box-sizing: border-box;
+    top: 0px;
+    position: fixed;
 }
 
 #chat-column {
